--- a/ydn/db/index.html
+++ b/ydn/db/index.html
@@ -44,6 +44,16 @@ namespace: "ydn.db"
           <dd>Database type. If not given all types of database are tried to
             delete.</dd>
         </dl>
+        <dl class="detailList">
+          <dt class="heading">Returns:</dt>
+          <dd><span class="light fixedFont">{!goog.async.Deferred}</span> Returns a
+            promise object for database delete process completion.
+            <div><span class="deferred-result">done</span>: <span style="font-style: italic;">
+              Result not defined.</span></div>
+            <div><span class="deferred-result">fail</span>: <span style="font-style: italic;">
+              Result not defined.</span></div>
+          </dd>
+        </dl>
       </details>
       <hr> <details> <summary> <a name="version"></a>
           <div class="fixedFont"><b>version</b></div>
