--- a/ydn/db/query.html
+++ b/ydn/db/query.html
@@ -60,7 +60,7 @@ q.list(function(x) {
     <dt class="heading">Parameters:</dt>
     <dt><span class="light fixedFont">{number=}</span> <b>limit</b></dt>
     <dd><span class="light fixedFont optional">Optional.</span> Limit
-      number of results.</dd>
+      number of results, default to 100.</dd>
   </dl>
   <dl class="detailList">
     <dt class="heading">Returns:</dt>
